index.html: changed

--- a/themes/slate/layouts/index.html
+++ b/themes/slate/layouts/index.html
@@ -9,7 +9,7 @@
 {{- if .Site.Params.BackgroundImages }} data-backgrounds='{{ range .Site.Params.BackgroundImages }}{{ . }},{{ end }}'{{- end }}>
 
 {{ partial "nav.html" . }}
-<h1 style=>Brisbane Structural Engineers</h1>
+<h1 style="margin:50px;">Brisbane Structural Engineers</h1>
 <div class="container">{{ partial "tile_slate.html" . }}
 </div>
 
